// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as form group 1`] = `
<Fragment>
  <div
    className="form__group"
  >
    <FormLabel
      className="control__label"
      idGuid="id-guid-1"
      required={false}
      tag="label"
    >
      My label
    </FormLabel>
    <div
      className="controls"
    >
      <Select2
        ariaDescribedby={null}
        className="form__control select js-select2"
        idGuid="id-guid-1"
        key=".0"
        options={
          Array [
            Object {
              "label": "Chocolate",
              "value": "chocolate",
            },
            Object {
              "label": "Strawberry",
              "value": "strawberry",
            },
            Object {
              "label": "Vanilla",
              "value": "vanilla",
            },
          ]
        }
      />
      <ErrorBlock
        errorGuid="error-guid-1"
      />
      <HelpBlock
        helpGuid="help-guid-1"
      />
    </div>
  </div>
</Fragment>
`;

exports[`renders as form group, with error, using the aria-describedby attribute 1`] = `
<Fragment>
  <div
    className="form__group has-error"
  >
    <FormLabel
      className="control__label"
      idGuid="id-guid-1"
      required={false}
      tag="label"
    >
      My label
    </FormLabel>
    <div
      className="controls"
    >
      <Select2
        ariaDescribedby="error-guid-1"
        className="form__control select js-select2"
        idGuid="id-guid-1"
        key=".0"
        options={
          Array [
            Object {
              "label": "Chocolate",
              "value": "chocolate",
            },
            Object {
              "label": "Strawberry",
              "value": "strawberry",
            },
            Object {
              "label": "Vanilla",
              "value": "vanilla",
            },
          ]
        }
      />
      <ErrorBlock
        errorGuid="error-guid-1"
      >
        foo
      </ErrorBlock>
      <HelpBlock
        helpGuid="help-guid-1"
      />
    </div>
  </div>
</Fragment>
`;

exports[`renders as form group, with helpText and error, using two aria-describedby attributes 1`] = `
<Fragment>
  <div
    className="form__group has-error"
  >
    <FormLabel
      className="control__label"
      idGuid="id-guid-1"
      required={false}
      tag="label"
    >
      My label
    </FormLabel>
    <div
      className="controls"
    >
      <Select2
        ariaDescribedby="error-guid-1 help-guid-1"
        className="form__control select js-select2"
        idGuid="id-guid-1"
        key=".0"
        options={
          Array [
            Object {
              "label": "Chocolate",
              "value": "chocolate",
            },
            Object {
              "label": "Strawberry",
              "value": "strawberry",
            },
            Object {
              "label": "Vanilla",
              "value": "vanilla",
            },
          ]
        }
      />
      <ErrorBlock
        errorGuid="error-guid-1"
      >
        bar
      </ErrorBlock>
      <HelpBlock
        helpGuid="help-guid-1"
      >
        foo
      </HelpBlock>
    </div>
  </div>
</Fragment>
`;

exports[`renders as form group, with helpText, using the aria-describedby attribute 1`] = `
<Fragment>
  <div
    className="form__group"
  >
    <FormLabel
      className="control__label"
      idGuid="id-guid-1"
      required={false}
      tag="label"
    >
      My label
    </FormLabel>
    <div
      className="controls"
    >
      <Select2
        ariaDescribedby="help-guid-1"
        className="form__control select js-select2"
        idGuid="id-guid-1"
        key=".0"
        options={
          Array [
            Object {
              "label": "Chocolate",
              "value": "chocolate",
            },
            Object {
              "label": "Strawberry",
              "value": "strawberry",
            },
            Object {
              "label": "Vanilla",
              "value": "vanilla",
            },
          ]
        }
      />
      <ErrorBlock
        errorGuid="error-guid-1"
      />
      <HelpBlock
        helpGuid="help-guid-1"
      >
        foo
      </HelpBlock>
    </div>
  </div>
</Fragment>
`;

exports[`renders the basic input 1`] = `
<select
  class="form__control select js-select2"
>
  <option
    label="Chocolate"
    value="chocolate"
  />
  <option
    label="Strawberry"
    value="strawberry"
  />
  <option
    label="Vanilla"
    value="vanilla"
  />
</select>
`;

exports[`renders the basic input with aria-describedby 1`] = `
<select
  aria-describedby="foo"
  class="form__control select js-select2"
>
  <option
    label="Chocolate"
    value="chocolate"
  />
  <option
    label="Strawberry"
    value="strawberry"
  />
  <option
    label="Vanilla"
    value="vanilla"
  />
</select>
`;

exports[`renders the basic input with id 1`] = `
<select
  class="form__control select js-select2"
  id="foo"
>
  <option
    label="Chocolate"
    value="chocolate"
  />
  <option
    label="Strawberry"
    value="strawberry"
  />
  <option
    label="Vanilla"
    value="vanilla"
  />
</select>
`;

exports[`renders the basic input with idGuid 1`] = `
<select
  class="form__control select js-select2"
  id="bar"
>
  <option
    label="Chocolate"
    value="chocolate"
  />
  <option
    label="Strawberry"
    value="strawberry"
  />
  <option
    label="Vanilla"
    value="vanilla"
  />
</select>
`;

exports[`renders the basic input with placeholder 1`] = `
<select
  class="form__control select js-select2"
  placeholder="foo"
>
  <option
    label="Chocolate"
    value="chocolate"
  />
  <option
    label="Strawberry"
    value="strawberry"
  />
  <option
    label="Vanilla"
    value="vanilla"
  />
</select>
`;

exports[`renders the basic input with required 1`] = `
<select
  class="form__control select js-select2"
  required=""
>
  <option
    label="Chocolate"
    value="chocolate"
  />
  <option
    label="Strawberry"
    value="strawberry"
  />
  <option
    label="Vanilla"
    value="vanilla"
  />
</select>
`;

exports[`will prefer id over idGuid 1`] = `
<select
  class="form__control select js-select2"
  id="foo"
>
  <option
    label="Chocolate"
    value="chocolate"
  />
  <option
    label="Strawberry"
    value="strawberry"
  />
  <option
    label="Vanilla"
    value="vanilla"
  />
</select>
`;
